# NRL

./: LICENSE  NRL.doxyfile  README.md  documentation.html
data/config/: properties_cartesian.d  properties_generic.d  properties_torobo.d
data/dataset/: primitive_0_0.csv  primitive_1_0.csv  primitive_1_1.csv  primitive_1_2.csv  primitive_2_0.csv  primitive_2_1.csv
html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  Cartesian_8cpp.html  Cartesian_8cpp__incl.map  Cartesian_8cpp__incl.md5  Cartesian_8cpp_source.html  Cartesian_8h.html  Cartesian_8h__dep__incl.map  Cartesian_8h__dep__incl.md5  Cartesian_8h__incl.map  Cartesian_8h__incl.md5  Cartesian_8h_source.html  CircularBuffer_8h.html  CircularBuffer_8h__dep__incl.map  CircularBuffer_8h__dep__incl.md5  CircularBuffer_8h_source.html  ContextPvrnnBeta_8cpp.html  ContextPvrnnBeta_8cpp__incl.map  ContextPvrnnBeta_8cpp__incl.md5  ContextPvrnnBeta_8cpp_source.html  ContextPvrnnBeta_8h.html  ContextPvrnnBeta_8h__dep__incl.map  ContextPvrnnBeta_8h__dep__incl.md5  ContextPvrnnBeta_8h__incl.map  ContextPvrnnBeta_8h__incl.md5  ContextPvrnnBeta_8h_source.html  ContextPvrnn_8cpp.html  ContextPvrnn_8cpp__incl.map  ContextPvrnn_8cpp__incl.md5  ContextPvrnn_8cpp_source.html  ContextPvrnn_8h.html  ContextPvrnn_8h__dep__incl.map  ContextPvrnn_8h__dep__incl.md5  ContextPvrnn_8h__incl.map  ContextPvrnn_8h__incl.md5  ContextPvrnn_8h_source.html  Dataset_8cpp.html  Dataset_8cpp__incl.map  (+837 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+77 more)
python/: NRL.py  main.py
src/: includes.h
src/context/: ContextPvrnn.cpp  ContextPvrnn.h  ContextPvrnnBeta.cpp  ContextPvrnnBeta.h  IContext.h
src/dataset/: Dataset.cpp  Dataset.h
src/layer/: ILayer.h  LayerPvrnn.cpp  LayerPvrnn.h  LayerPvrnnBeta.cpp  LayerPvrnnBeta.h
src/lib/: CMakeLists.txt  LibNRL.cpp  LibNRL.h  nrl.cpp
src/network/: INetwork.h  NetworkPvrnn.cpp  NetworkPvrnn.h  NetworkPvrnnBeta.cpp  NetworkPvrnnBeta.h
src/robot/: Cartesian.cpp  Cartesian.h  Generic.cpp  Generic.h  IRobot.h  Torobo.cpp  Torobo.h
src/standalone/: CMakeLists.txt  CircularBuffer.h  main.cpp
src/utils/: Exception.cpp  Exception.h  Utils.cpp  Utils.h
